# energyMeter

./: .gitattributes  .gitignore  README.md  app.py  database.py  git_tool.py  mqtt.py  pyproject.toml  scheduler.py  telegram.py
data/: energy.db.bk
install/: install.sh  projects_energy-monitor.service  projects_energy_monitor.service
src/: __init__.py  __main__.py  app.py  config.py  database.py  git_tool.py  helpers.py  mqtt.py  scheduler.py  telegram.py
static/: app.js  index.html  mobile.js  shared.js  styles.css
tests/: conftest.py  test_app.py  test_database.py
