[project]
name = "energy-monitor"
version = "0.1.0"
description = ""
authors = [
    {name = "momonala", email = "mnalavadi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.0,<3.0.0",
    "paho-mqtt>=2.0.0,<3.0.0",
    "flask>=3.0.0,<4.0.0",
    "flask-compress>=1.15,<2.0.0",
    "schedule>=1.0.0,<2.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black",
    "jupyter>=1.1.1",
    "notebook>=7.5.1",
    "pandas>=2.3.3",
    "ruff>=0.14.10",
    "isort>=7.0.0",
    "typer>=0.9.0",
]

[tool.config]
# Server settings
server_url = "192.168.2.107"
flask_port = 5008
mqtt_port = 1883

# Database
database_path = "data/energy.db"

# MQTT settings
mqtt_topic = "tele/tasmota/#"
tasmota_ui_url = "http://192.168.2.110/"

# Cloudflare tunnel settings
tunnel_name = "raspberrypi-tunnel"
domain_suffix = "mnalavadi.org"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
app = "src.app:main"
config = "src.config:main"

[tool.black]
line-length = 110
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
force_single_line = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-s -v --cov=src --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

